--- a/female.html
+++ b/female.html
@@ -31,25 +31,25 @@
     </div>
     <!-- Header Section Begin -->
     <header class="header mx-3 px-3">
-        <!-- <div class="container"> -->
+        <div class="container">
             <div class="row">
                 <div class="col-lg-1 col-md-1">
-                    <div class="header__logo text-center" style="height: 100px;">
-                        <a href="./index.html" style="height: 100%;"><img src="img/logo/logonew-03.jpg" alt="" style="object-fit: cover; height: 100%;"></a>
+                    <div class="header__logo text-center">
+                        <a href="./index.html"><img src="img/logo/logonew-03.jpg" alt="" style="object-fit: cover; height: 100%;"></a>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6">
+                <div class="col-lg-5 col-md-5">
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li><a href="./best-seller.html">Sản phẩm bán chạy</a></li>
                             <li class="active"><a href="#">Nữ</a></li>
                             <li><a href="./male.html">Nam</a></li>
-                            <li><a href="#">Tin tức</a></li>
+                            <li><a href="./news.html">Tin tức</a></li>
                             <li><a href="#">Giới thiệu</a></li>
                         </ul>
                     </nav>
                 </div>
-                <div class="col-lg-5 col-md-5">
+                <div class="col-lg-6 col-md-6">
                     <div class="header__nav__option">
                         <div class="row">
                             <div class="col-lg-6 col-md-6">
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="canvas__open"><i class="fa fa-bars"></i></div>
-        <!-- </div> -->
+        </div>
     </header>
     <!-- Header Section End -->
 
@@ -92,7 +92,7 @@
         <div class="container">
             <div class="d-flex mb-4">
                <div class="clothes-type">
-                    <img src="./img/clothes-type/simicategory_filename_tablet1698394465.webp"/>
+                    <a href="category.html"><img src="./img/clothes-type/simicategory_filename_tablet1698394465.webp"/></a>
                     <h5 class="text-center">Áo phông</h5>
                 </div>
                 <div class="clothes-type">
