--- a/news.html
+++ b/news.html
@@ -43,8 +43,8 @@
                         <ul>
                             <li><a href="./best-seller.html">Sản phẩm bán chạy</a></li>
                             <li><a href="./female.html">Nữ</a></li>
-                            <li class="active"><a href="#">Nam</a></li>
-                            <li><a href="#">Tin tức</a></li>
+                            <li><a href="./male.html">Nam</a></li>
+                            <li class="active"><a href="#">Tin tức</a></li>
                             <li><a href="./introduce.html">Giới thiệu</a></li>
                         </ul>
                     </nav>
@@ -76,67 +76,134 @@
     </header>
     <!-- Header Section End -->
 
-    <!-- Hero Section Begin -->
-    <section>
-        <div class="d-block">
-            <img src="img/banner/banner-nam.png"/>
-        </div>
-    </section>
-    <!-- Hero Section End -->
-
     <!-- Product Section Begin -->
     <section class="product spad">
-        <div class="row mb-3">
-            <h3 class="w-100 text-center p-3"><strong>SẢN PHẨM CẦN TÌM</strong></h3>
-        </div>
         <div class="container">
-            <div class="d-flex mb-4">
-               <div class="clothes-type">
-                    <img src="./img/clothes-type/simicategory_filename_tablet1698394465.webp"/>
-                    <h5 class="text-center">Áo phông</h5>
+            <div class="row mb-3 px-3">
+                <span class="text-grey">Trang chủ | </span> <p class="ml-2 text-black">Tin tức</p>
+            </div>
+            <div class="row mb-3">
+                <h3 class="w-100 text-center p-3"><strong>TIN TỨC</strong></h3>
+            </div>
+            <div class="row news-list">
+                <div class="col-lg-6 col-md-6 col-sm-12 banner-left">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <a href="./news-detail.html"><img src="./img/tintuc/4.jpg" /></a>
+                        </div>
+                        <div class="col-lg-12 py-3">
+                            <h4><strong>THỜI GIAN CỬA HÀNG ĐÓNG CỬA DỊP TẾT NGUYÊN ĐÁN 2024</strong></h4>
+                        </div>
+                    </div>
                 </div>
-                <div class="clothes-type">
-                    <img src="./img/clothes-type/simicategory_filename_tablet1698394512.webp"/>
-                    <h5 class="text-center">Áo dài tay</h5>
+                <div class="col-lg-6 col-md-6 col-sm-12 banner-right">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h3 class="px-3 pb-3"><strong>XEM NHIỀU NHẤT</strong></h3>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4">
+                            <a href="./news-detail.html"><img src="./img/tintuc/1.png" /></a>
+                        </div>
+                        <div class="col-lg-8 col-md-8 col-sm-8">
+                            <h4><strong>SỰ KIỆN SIÊU SALE ĐẦU NĂM</strong></h4>
+                            <span class="text-grey d-block mt-2">20/01/2024</span>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4">
+                            <a href="./news-detail.html"><img src="./img/tintuc/3.png" /></a>
+                        </div>
+                        <div class="col-lg-8 col-md-8 col-sm-8">
+                            <h4><strong>ĐỒNG GIÁ 149K - 199K TOÀN BỘ CỬA HÀNG</strong></h4>
+                            <span class="text-grey d-block mt-2">20/01/2024</span>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-sm-4">
+                            <a href="./news-detail.html"><img src="./img/tintuc/3.png" /></a>
+                        </div>
+                        <div class="col-lg-8 col-md-8 col-sm-8">
+                            <h4><strong>ĐỒNG GIÁ 149K - 199K TOÀN BỘ CỬA HÀNG</strong></h4>
+                            <span class="text-grey d-block mt-2">20/01/2024</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="clothes-type">
-                    <img src="./img/clothes-type/simicategory_filename_tablet1702457455.webp"/>
-                    <h5 class="text-center">Áo khoác</h5>
+                <div class="col-lg-4 col-md-4 col-sm-12 mt-3">
+                    <div class="row">
+                        <div class="col-12">
+                            <a href="./news-detail.html"><img src="./img/news/3.png"></a>
+                        </div>
+                        <div class="col-12 my-2">
+                            <span class="text-grey">20/01/2024</span>
+                        </div>
+                        <div class="col-12">
+                            <h5><strong>3 cách mặc áo sơ mi bò denim nam cho chàng thêm nổi bật</strong></h5>
+                        </div>
+                    </div>
                 </div>
-                <div class="clothes-type">
-                    <img src="./img/clothes-type/simicategory_filename_tablet1698394609.webp"/>
-                    <h5 class="text-center">Quần</h5>
+                <div class="col-lg-4 col-md-4 col-sm-12 mt-3">
+                    <div class="row">
+                        <div class="col-12">
+                            <a href="./news-detail.html"><img src="./img/news/2.png"></a>
+                        </div>
+                        <div class="col-12 my-2">
+                            <span class="text-grey">20/01/2024</span>
+                        </div>
+                        <div class="col-12">
+                            <h5><strong>3 cách mặc áo sơ mi bò denim nam cho chàng thêm nổi bật</strong></h5>
+                        </div>
+                    </div>
                 </div>
-                <div class="clothes-type">
-                    <img src="./img/clothes-type/simicategory_filename_tablet1698394386.webp"/>
-                    <h5 class="text-center">Quần lót</h5>
+                <div class="col-lg-4 col-md-4 col-sm-12 mt-3">
+                    <div class="row">
+                        <div class="col-12">
+                            <a href="./news-detail.html"><img src="./img/news/1.png"></a>
+                        </div>
+                        <div class="col-12 my-2">
+                            <span class="text-grey">20/01/2024</span>
+                        </div>
+                        <div class="col-12">
+                            <h5><strong>3 cách mặc áo sơ mi bò denim nam cho chàng thêm nổi bật</strong></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 mt-3">
+                    <div class="row">
+                        <div class="col-12">
+                            <a href="./news-detail.html"><img src="./img/news/3.png"></a>
+                        </div>
+                        <div class="col-12 my-2">
+                            <span class="text-grey">20/01/2024</span>
+                        </div>
+                        <div class="col-12">
+                            <h5><strong>3 cách mặc áo sơ mi bò denim nam cho chàng thêm nổi bật</strong></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 mt-3">
+                    <div class="row">
+                        <div class="col-12">
+                            <a href="./news-detail.html"><img src="./img/news/2.png"></a>
+                        </div>
+                        <div class="col-12 my-2">
+                            <span class="text-grey">20/01/2024</span>
+                        </div>
+                        <div class="col-12">
+                            <h5><strong>3 cách mặc áo sơ mi bò denim nam cho chàng thêm nổi bật</strong></h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-12 mt-3">
+                    <div class="row">
+                        <div class="col-12">
+                            <a href="./news-detail.html"><img src="./img/news/1.png"></a>
+                        </div>
+                        <div class="col-12 my-2">
+                            <span class="text-grey">20/01/2024</span>
+                        </div>
+                        <div class="col-12">
+                            <h5><strong>3 cách mặc áo sơ mi bò denim nam cho chàng thêm nổi bật</strong></h5>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-md-6 col-sm-6 d-flex align-items-center mb-3">
-                    <strong class="mr-2">Bộ lọc:</strong>
-                    <select class="form-control form-control-sm mr-2">
-                        <option>Khoảng giá</option>
-                        <option>< 200.000 đ</option>
-                        <option>200.000 đ - 500.000 đ</option>
-                        <option>500.000 đ - 1.000.000 đ</option>
-                        <option>> 1.000.000 đ</option>
-                    </select>
-                    <select class="form-control form-control-sm mr-2">
-                        <option>Kích thước</option>
-                        <option>S</option>
-                        <option>M</option>
-                        <option>L</option>
-                        <option>XL</option>
-                        <option>XXL</option>
-                    </select>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-md-6 col-sm-6 d-flex align-items-center justify-content-end mb-3">
-                    <strong><i class="fa fa-bars" aria-hidden="true"></i>  Sắp xếp theo</strong>
-                </div>
-            </div>
-            <div id="productList" class="row product__filter"></div>
-            <div class="row justify-content-end">
+            <div class="row justify-content-center mt-5">
                 <nav>
                     <ul class="pagination">
                         <li>
@@ -217,6 +284,7 @@
                         <p>
                             <strong>@CÔNG TY TNHH SACLET</strong>, CHỨNG NHẬN ĐĂNG KÝ DOANH NGHIỆP TỪ NGÀY 01/01/2024 
                         </p>
+                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     </div>
                 </div>
             </div>
@@ -224,124 +292,6 @@
     </footer>
     <!-- Footer Section End -->
 
-    <script>
-        var data = [
-            {
-                price: '449.500',
-                prePrice: '699.000',
-                title: 'Áo hoodie nam dày dặn',
-                discount: 50,
-                imgUrl: 'img/nam/4.jpg'
-            },
-            {
-                price: '349.500',
-                prePrice: '699.000',
-                title: 'Quần khaki nam dáng ôm',
-                discount: 50,
-                imgUrl: 'img/nam/1.jpg'
-            },
-            {
-                price: '529.500 đ',
-                prePrice: '699.000',
-                title: 'Áo sweater nam cho mùa thu',
-                discount: 30,
-                imgUrl: 'img/nam/6.jpg'
-            },
-            {
-                price: '399.500 đ',
-                prePrice: '799.000',
-                title: 'Áo khoác chần bông nam Ultra Air siêu nhẹ,...',
-                discount: 50,
-                imgUrl: 'img/nam/5.jpg'
-            },
-            {
-                price: '399.500 đ',
-                prePrice: '799.000',
-                title: 'Áo khoác chần bông nam Ultra Air siêu nhẹ,...',
-                discount: 50,
-                imgUrl: 'img/nam/5.jpg'
-            },
-            {
-                price: '559.500 đ',
-                prePrice: '799.000',
-                title: 'Quần jogger nam vải dù',
-                discount: 30,
-                imgUrl: 'img/nam/7.png'
-            },
-            {
-                price: '399.500 đ',
-                prePrice: '799.000',
-                title: 'Áo khoác gió nam in họa tiết có túi khóa kéo',
-                discount: 50,
-                imgUrl: 'img/nam/3.jpg'
-            },
-            {
-                price: '399.500 đ',
-                prePrice: '799.000',
-                title: 'Áo cardigan nữ cổ V dài tay dáng ngắn vừa',
-                discount: 30,
-                imgUrl: 'img/nam/8.png'
-            },
-            {
-                price: '349.500 đ',
-                prePrice: '699.000',
-                title: 'Quần kaki nam dáng ôm',
-                discount: 50,
-                imgUrl: 'img/nam/1.jpg'
-            },
-            {
-                price: '399.500 đ',
-                prePrice: '799.000',
-                title: 'Áo thun nam dáng ôm',
-                discount: 50,
-                imgUrl: 'img/nam/9.png'
-            },
-            {
-                price: '149.500 đ',
-                prePrice: '299.000',
-                title: 'Quần nỉ nam cạp chun có hình in dáng rộng',
-                discount: 50,
-                imgUrl: 'img/nam/2.jpg'
-            },
-            {
-                price: '364.500 đ',
-                prePrice: '699.000',
-                title: 'Áo thun nam dáng ôm',
-                discount: 50,
-                imgUrl: 'img/nam/10.png'
-            },
-        ];
-        var content = "";
-        data.forEach((item) => {
-            content += `<div class="col-lg-3 col-md-6 col-sm-6 col-md-6 col-sm-6">
-            <div class="product__item">
-                <div class="product__item__pic set-bg" data-setbg="./${item?.imgUrl}">
-                    <ul class="product__hover">
-                        <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
-                    </ul>
-                </div>
-                <div class="product__item__text">
-                    <h6>${item?.title}</h6>
-                    <a href="#" class="add-cart">+ Thêm giỏ hàng</a>
-                    <h6>${item?.price} đ</h6>
-                    <h6><del>${item?.prePrice} đ</del>   <strong class="text-danger"> -${item?.discount}%</strong></h6> 
-                    <div class="product__color__select">
-                        <label for="pc-4">
-                            <input type="radio" id="pc-4">
-                        </label>
-                        <label class="active black" for="pc-5">
-                            <input type="radio" id="pc-5">
-                        </label>
-                        <label class="grey" for="pc-6">
-                            <input type="radio" id="pc-6">
-                        </label>
-                    </div>
-                </div>
-            </div>
-        </div>`;
-        });
-        document.getElementById("productList").innerHTML = content;
-    </script>
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
