--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
     </div>
     <!-- Header Section Begin -->
     <header class="header mx-3 px-3">
-        <!-- <div class="container"> -->
+        <div class="container">
             <div class="row">
                 <div class="col-lg-1 col-md-1">
-                    <div class="header__logo text-center" style="height: 100px;">
-                        <a href="./index.html" style="height: 100%;"><img src="img/logo/logonew-03.jpg" alt="" style="object-fit: cover; height: 100%;"></a>
+                    <div class="header__logo text-center" style="height: fit-content;">
+                        <a href="./index.html" style="height: fit-content;"><img src="img/logo/logonew-03.jpg" alt="" style="object-fit: cover; height: 100%;"></a>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6">
+                <div class="col-lg-5 col-md-5">
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li><a href="./best-seller.html">Sản phẩm bán chạy</a></li>
                             <li><a href="./female.html">Nữ</a></li>
                             <li><a href="./male.html">Nam</a></li>
                             <li><a href="#">Tin tức</a></li>
-                            <li><a href="#">Giới thiệu</a></li>
+                            <li><a href="./introduce.html">Giới thiệu</a></li>
                             <!-- <li><a href="./shop.html">Shop</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
@@ -61,7 +61,7 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="col-lg-5 col-md-5">
+                <div class="col-lg-6 col-md-6">
                     <div class="header__nav__option">
                         <div class="row">
                             <div class="col-lg-6 col-md-6">
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="canvas__open"><i class="fa fa-bars"></i></div>
-        <!-- </div> -->
+        </div>
     </header>
     <!-- Header Section End -->
 
